# HW_7_WEB

./: my_select.py  pyproject.toml  seeds.py
