[tool.poetry]
name = "HW_7_WEB"
version = "0.1.0"
description = ""
authors = ["SaitovMykyta <rassskoll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
faker = "^25.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
